--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@vechain/connex-framework": "^2.1.0",
     "@vechain/web3-providers-connex": "^1.1.2",
     "chalk": "4",
-    "commander": "^12.0.0",
+    "commander": "11",
     "cors": "^2.8.5",
     "ethers": "^6.11.1",
     "express": "^4.18.3",
@@ -18,6 +18,7 @@
     "@types/figlet": "^1.5.8",
     "@types/node": "^20.11.24",
     "nodemon": "^3.1.0",
+    "pm2": "^5.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
@@ -25,6 +26,8 @@
     "build": "tsc",
     "postinstall": "tsc",
     "start": "node dist/rpc.js",
+    "daemon:up": "pm2 start dist/rpc.js",
+    "daemon:down": "pm2 stop dist/rpc.js",
     "watch": "nodemon -e ts --exec 'yarn build && yarn start'"
   }
 }
