--- a/package.json
+++ b/package.json
@@ -15,24 +15,41 @@
   "dependencies": {
     "@vechain/connex-driver": "^2.1.0",
     "@vechain/connex-framework": "^2.1.0",
-    "@vechain/web3-providers-connex": "^1.1.2",
+    "@vechain/connex-types": "^2.0.2",
     "chalk": "4",
     "commander": "11",
     "cors": "^2.8.5",
     "ethers": "^6.11.1",
+    "eventemitter3": "^5.0.1",
     "express": "^4.18.3",
-    "figlet": "^1.7.0"
+    "figlet": "^1.7.0",
+    "thor-devkit": "^2.0.4",
+    "web3-utils": "^4.0.6",
+    "web3-validator": "^2.0.2"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/chai": "^4.3.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/figlet": "^1.5.8",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.11.24",
+    "@vechain/connex-driver": "^2.0.10",
+    "@vechain/connex-framework": "^2.0.8",
+    "chai": "^4.3.6",
+    "mocha": "^10.2.0",
     "nodemon": "^3.1.0",
+    "nyc": "^15.1.0",
     "pm2": "^5.3.1",
+    "source-map-support": "^0.5.21",
+    "testcontainers": "^10.2.1",
+    "thor-builtin": "^2.0.2",
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
-    "typescript": "^5.3.3"
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^5.3.3",
+    "web3": "^4.1.1"
   },
   "scripts": {
     "build": "tsc",
