--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vechain.energy/vet-rpc",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "packageManager": "yarn@3.6.1",
   "bin": "dist/rpc.js",
   "main": "dist/rpc.js",
@@ -13,19 +13,13 @@
     "url": "https://github.com/vechain-energy/rpc-proxy/issues"
   },
   "dependencies": {
-    "@vechain/connex-driver": "^2.1.0",
-    "@vechain/connex-framework": "^2.1.0",
-    "@vechain/connex-types": "^2.0.2",
+    "@vechain/sdk-network": "^1.0.0-beta.3",
+    "@vechain/sdk-provider": "^1.0.0-beta.3",
     "chalk": "4",
     "commander": "11",
     "cors": "^2.8.5",
-    "ethers": "^6.11.1",
-    "eventemitter3": "^5.0.1",
     "express": "^4.18.3",
-    "figlet": "^1.7.0",
-    "thor-devkit": "^2.0.4",
-    "web3-utils": "^4.0.6",
-    "web3-validator": "^2.0.2"
+    "figlet": "^1.7.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
@@ -36,11 +30,10 @@
     "@types/node": "^20.11.24",
     "nodemon": "^3.1.0",
     "pm2": "^5.3.1",
-    "thor-builtin": "^2.0.2",
+    "thor-devkit": "^2.0.9",
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
-    "typescript": "^5.3.3",
-    "web3": "^4.1.1"
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "build": "tsc",
