--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vechain.energy/vet-rpc",
-  "version": "1.4.6",
+  "version": "1.4.7",
   "packageManager": "yarn@3.6.1",
   "bin": "dist/rpc.js",
   "main": "dist/rpc.js",
@@ -13,7 +13,7 @@
     "url": "https://github.com/vechain-energy/rpc-proxy/issues"
   },
   "dependencies": {
-    "@vechain/sdk-network": "1.0.0-beta.18",
+    "@vechain/sdk-network": "^1.0.0-beta.18",
     "chalk": "4",
     "commander": "11",
     "cors": "^2.8.5",
@@ -40,6 +40,7 @@
     "daemon:up": "pm2 start dist/rpc.js",
     "daemon:down": "pm2 stop dist/rpc.js",
     "watch": "nodemon -e ts --exec 'yarn build && yarn start'",
-    "prepublish": "tsc"
+    "prepublish": "tsc",
+    "postinstall": "./patches.sh"
   }
 }
