--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vechain.energy/vet-rpc",
-  "version": "1.4.8",
+  "version": "1.4.9",
   "packageManager": "yarn@3.6.1",
   "bin": "dist/rpc.js",
   "main": "dist/rpc.js",
@@ -16,12 +16,14 @@
     "@vechain/sdk-network": "^1.0.0-beta.18",
     "chalk": "4",
     "commander": "11",
+    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "figlet": "^1.7.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
+    "@types/connect-timeout": "^0.0.39",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/figlet": "^1.5.8",
