--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vechain.energy/vet-rpc",
-  "version": "1.4.9",
+  "version": "1.5.0",
   "packageManager": "yarn@3.6.1",
   "bin": "dist/rpc.js",
   "main": "dist/rpc.js",
@@ -19,7 +19,8 @@
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "figlet": "^1.7.0"
+    "figlet": "^1.7.0",
+    "mnemonist": "^0.39.8"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
@@ -39,7 +40,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/rpc.js",
-    "daemon:up": "pm2 start dist/rpc.js",
+    "daemon:up": "pm2 start dist/rpc.js --max-memory-restart 512M",
     "daemon:down": "pm2 stop dist/rpc.js",
     "watch": "nodemon -e ts --exec 'yarn build && yarn start'",
     "prepublish": "tsc",
