--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vechain.energy/vet-rpc",
-  "version": "1.5.2",
+  "version": "1.5.3",
   "packageManager": "yarn@3.6.1",
   "bin": "dist/rpc.js",
   "main": "dist/rpc.js",
@@ -13,7 +13,7 @@
     "url": "https://github.com/vechain-energy/rpc-proxy/issues"
   },
   "dependencies": {
-    "@vechain/sdk-network": "^1.0.0-beta.18",
+    "@vechain/sdk-network": "1.0.0-beta.18",
     "axios": "^1.7.2",
     "axios-cache-interceptor": "^1.5.3",
     "chalk": "4",
@@ -21,16 +21,21 @@
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "figlet": "^1.7.0"
+    "figlet": "^1.7.0",
+    "object-hash": "^3.0.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/chai": "^4.3.0",
+    "@types/chalk": "^2.2.0",
+    "@types/commander": "^2.12.2",
     "@types/connect-timeout": "^0.0.39",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/figlet": "^1.5.8",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.11.24",
+    "@types/object-hash": "^3.0.6",
     "nodemon": "^3.1.0",
     "pm2": "^5.3.1",
     "thor-devkit": "^2.0.9",
