--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vechain.energy/vet-rpc",
-  "version": "1.5.3",
+  "version": "1.6.0",
   "packageManager": "yarn@3.6.1",
   "bin": "dist/rpc.js",
   "main": "dist/rpc.js",
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "figlet": "^1.7.0",
+    "ioredis": "^5.4.1",
     "object-hash": "^3.0.0"
   },
   "devDependencies": {
